resoled wrap issue via bootstrap

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -103,7 +103,5 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  flex-wrap: wrap;
   padding-top: 20px;
-  flex-grow: 1;
 }
