--- a/src/app/components/featured-products/featured-products.component.css
+++ b/src/app/components/featured-products/featured-products.component.css
@@ -53,7 +53,7 @@
   color: #088178;
 }
 
-.pro .cart {
+.pro .cart-icon {
   position: absolute;
   display: flex;
   align-items: center;
